[PI-311] Fixes in wallet summary title and in buttons alignment in wallet settings

--- a/app/components/widgets/forms/ReadOnlyInput.scss
+++ b/app/components/widgets/forms/ReadOnlyInput.scss
@@ -20,7 +20,7 @@
   }
 
   .button {
-    bottom: 13px;
+    bottom: 10px;
     color: var(--theme-label-button-color);
     cursor: pointer;
     font-family: var(--font-light);
